# backend

./: .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  README_bot.md  README_frontend.md  api_docs_frontend.md  db (копия).sqlite3  docker-compose.dev.yml  docker-compose.prod.yml  manage.py  mock_data.py  requirements.txt
.github/workflows/: django.yml  django_tests.yml
api/: .how_to_use.MD.swp  admin.py  apps.py  how_to_use.MD  models.py  serializers.py  services.py  signals.py  tasks.py  tasks_beat.py  tests.py  urls.py  views.py
api/control/: models.py  tests.py  urls.py  utils.py  views.py
api/decode_from_url/: tests.py  urls.py  views.py
api/form_url/: models.py
api/forms_decode_url/: tests.py  urls.py  views.py
api/management/: __init__.py  models.py  tests.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_alter_text_options.py  0002_essayformurl_evaluationformurl_delete_formurl.py  0002_rename_textkeys_textkey.py  0002_workdistributiontoevaluate.py  0003_alter_evaluationformurl_evaluation_work.py  0003_alter_text_week_id.py  0003_alter_textkey_options_alter_textkey_id.py  0003_alter_workdistributiontoevaluate_week_id.py  0004_alter_essay_options_alter_text_options.py  (+22 more)
api/work_distribution/algorithm/hungarian_algorithm_cpp/: CMakeLists.txt  Hungarian.cpp  Hungarian.h  makefile
nginx/: nginx.conf
telegram/: TelegramHelper.py  __init__.py  exceptions.py
triproverochki/: asgi.py  celery.py  hosts.py  logging_filters.py  logging_formatters.py  logging_handlers.py  settings.py  urls.py  wsgi.py
(+40 files in other folders)
